--- a/src/main/resources/view/db_interface_gui.fxml
+++ b/src/main/resources/view/db_interface_gui.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -64,6 +65,7 @@
                                         <Image url="@../images/profile.png" />
                                     </image>
                                 </ImageView>
+                        <ProgressIndicator layoutX="78.0" layoutY="132.0" progress="0.0" />
                             </children>
                         </AnchorPane>
                     </children>
