--- a/src/main/resources/view/db_interface_gui.fxml
+++ b/src/main/resources/view/db_interface_gui.fxml
@@ -80,32 +80,32 @@
          <right>
                 <VBox prefHeight="540.0" prefWidth="202.0" styleClass="text_field_pane" BorderPane.alignment="CENTER">
                     <children>
-                        <TextField fx:id="first_name" onAction="#editDeleteCheck" onKeyPressed="#editDeleteCheck" promptText="First Name" styleClass="text_field">
+                        <TextField fx:id="first_name" onAction="#textBoxCheck" onKeyPressed="#textBoxCheck" promptText="First Name" styleClass="text_field">
                             <VBox.margin>
                                 <Insets left="10.0" right="10.0" top="5.0" />
                             </VBox.margin>
                         </TextField>
-                        <TextField fx:id="last_name" onAction="#editDeleteCheck" onKeyPressed="#editDeleteCheck" promptText="Last Name" styleClass="text_field">
+                        <TextField fx:id="last_name" onAction="#textBoxCheck" onKeyPressed="#textBoxCheck" promptText="Last Name" styleClass="text_field">
                             <VBox.margin>
                                 <Insets left="10.0" right="10.0" top="5.0" />
                             </VBox.margin>
                         </TextField>
-                        <TextField fx:id="department" onAction="#editDeleteCheck" onKeyPressed="#editDeleteCheck" promptText="Department" styleClass="text_field">
+                        <TextField fx:id="department" onAction="#textBoxCheck" onKeyPressed="#textBoxCheck" promptText="Department" styleClass="text_field">
                             <VBox.margin>
                                 <Insets left="10.0" right="10.0" top="5.0" />
                             </VBox.margin>
                         </TextField>
-                        <TextField fx:id="major" onAction="#editDeleteCheck" onKeyPressed="#editDeleteCheck" promptText="Major" styleClass="text_field">
+                        <TextField fx:id="major" onAction="#textBoxCheck" onKeyPressed="#textBoxCheck" promptText="Major" styleClass="text_field">
                             <VBox.margin>
                                 <Insets left="10.0" right="10.0" top="5.0" />
                             </VBox.margin>
                         </TextField>
-                        <TextField fx:id="email" onAction="#editDeleteCheck" onKeyPressed="#editDeleteCheck" promptText="Email" styleClass="text_field">
+                        <TextField fx:id="email" onAction="#textBoxCheck" onKeyPressed="#textBoxCheck" promptText="Email" styleClass="text_field">
                             <VBox.margin>
                                 <Insets left="10.0" right="10.0" top="5.0" />
                             </VBox.margin>
                         </TextField>
-                        <TextField fx:id="imageURL" promptText="imageURL" styleClass="text_field">
+                        <TextField fx:id="imageURL" onAction="#textBoxCheck" onKeyPressed="#textBoxCheck" promptText="imageURL" styleClass="text_field">
                             <VBox.margin>
                                 <Insets left="10.0" right="10.0" top="5.0" />
                             </VBox.margin>
@@ -120,7 +120,7 @@
                                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                             </VBox.margin>
                         </Button>
-                        <Button fx:id="addBtn" mnemonicParsing="false" onAction="#addNewRecord" styleClass="db_btn" text="Add">
+                        <Button fx:id="addButton" mnemonicParsing="false" onAction="#addNewRecord" styleClass="db_btn" text="Add">
                             <VBox.margin>
                                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                             </VBox.margin>
