--- a/src/main/resources/view/db_interface_gui.fxml
+++ b/src/main/resources/view/db_interface_gui.fxml
@@ -34,9 +34,9 @@
                         </Menu>
                   <Menu mnemonicParsing="false" styleClass="menu_options" text="Edit">
                      <items>
-                        <MenuItem fx:id="editItem" mnemonicParsing="true" styleClass="menu_items" text="Edit       Ctrl+E" />
-                        <MenuItem fx:id="deleteItem" mnemonicParsing="true" styleClass="menu_items" text="Delete        Ctrl+D" />
-                        <MenuItem fx:id="ClearItem" mnemonicParsing="false" styleClass="menu_items" text="Clear        Ctrl+R" />
+                        <MenuItem fx:id="editItem" mnemonicParsing="true" onAction="#editRecord" styleClass="menu_items" text="Edit       Ctrl+E" />
+                        <MenuItem fx:id="deleteItem" mnemonicParsing="true" onAction="#deleteRecord" styleClass="menu_items" text="Delete        Ctrl+D" />
+                        <MenuItem fx:id="ClearItem" mnemonicParsing="false" onAction="#clearForm" styleClass="menu_items" text="Clear        Ctrl+R" />
                         <MenuItem fx:id="CopyItem" mnemonicParsing="false" styleClass="menu_items" text="Copy       Ctrl+C" />
                      </items>
                   </Menu>
